--- a/EV Project_ZF.ipynb
+++ b/EV Project_ZF.ipynb
@@ -507,7 +507,7 @@
    "id": "8e1acba8",
    "metadata": {},
    "source": [
-    "Note that the FastCharge column is of type object.\n",
+    "Note that the FastCharge column is of type 'object'.\n",
     "\n",
     "**Check for non numeric values in the FastCharge_KmH column**\n",
     "**Convert FastCharge column into a numeric column. Forcing all non-numeric values to NaN**\n",
